--- a/css/index.css
+++ b/css/index.css
@@ -379,9 +379,7 @@ nav .content .links{
   width: 80%;
   height:80%;
 }
-.icon::before{
-  font-size: 170px;
-}
+
 
 
 @media(max-width: 900px){
@@ -406,7 +404,7 @@ nav .content .links{
   text-align: center;
 }
 a > .version{
-  font-size: 20px;
+  font-size: 0.98em;
   padding-top: 40px;
   display: block;
   color: white;
@@ -415,7 +413,7 @@ a > .title{
   position: relative;
   padding-bottom: 20px;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 2em;
   color: white;
 }
 .title::before,a .title::after{
