--- a/css/index.css
+++ b/css/index.css
@@ -407,6 +407,7 @@ nav .content .links{
     align-items: center;
     justify-content: center;
     height: 100%;
+    padding: 0px;
 }
   .box{
     width: 85%;
@@ -414,6 +415,10 @@ nav .content .links{
     margin-top: 35px;
     align-items: center;
     text-align: center;
+  }
+  .icon > img{
+    width: 100%;
+    height:20vh;
   }
 }
 .logo-description{
@@ -433,6 +438,24 @@ a > .title{
   font-size: 2em;
   color: white;
 }
+
+@media(max-width: 400px){
+  a > .version{
+    font-size: 0.98em;
+    padding-top: 40px;
+    display: block;
+    color: white;
+  }
+  a > .title{
+    position: relative;
+    padding-bottom: 20px;
+    font-weight: bold;
+    font-size: 1.6em;
+    color: white;
+  }
+  
+}
+
 .title::before,a .title::after{
   position: absolute;
   content: "";
