--- a/css/inventatori.css
+++ b/css/inventatori.css
@@ -385,3 +385,18 @@ td a h2{
 }
 
 
+
+@media(max-width: 400px){
+  table {
+    text-align: center;
+    margin: 5%;
+    width: 90%;
+    min-height: 70vh;
+    border-spacing: 10px;
+  } 
+td a img {
+  width: 100%;
+  min-height: 30vh;
+  max-height: 50vh;
+}
+}
