--- a/css/inventatori.css
+++ b/css/inventatori.css
@@ -346,7 +346,7 @@ nav .content .links{
 .tabelul {
 	padding: 100px 0px;
   width: 100%;
-  height: 200vh;
+  height: 100%;
   align-items: center;
 }
 
@@ -387,11 +387,12 @@ td a h2{
 
 
 @media(max-width: 400px){
+ 
   table {
     text-align: center;
-    margin: 5%;
+    margin: 2%;
     width: 90%;
-    min-height: 70vh;
+    min-height: 50vh;
     border-spacing: 10px;
   } 
 td a img {
