--- a/css/quiz.css
+++ b/css/quiz.css
@@ -470,6 +470,9 @@ nav .content .links{
 }
 
 @media (max-width: 400px){
+  .image{
+		max-width: 90%;
+	}
 	.more .read-more{
 		font-size: 1em;
 	}
