--- a/css/404eror.css
+++ b/css/404eror.css
@@ -6,15 +6,17 @@
     font-size: 106px;
     font-family: 'Catamaran', sans-serif;
     font-weight: 800;
-    margin: 70px 15px;
+    margin: 70px 25px;
+    width: 97%;
 }
 .error-container > span {
     display: inline-block;
     position: relative;
+    outline:none;
 }
 .error-container > span.four {
-    width: 136px;
-    height: 43px;
+    width: 1.3em;
+    height: 0.4em;
     border-radius: 999px;
     transform-origin: 50% 100% 0px;
     transform: rotateX(0);
@@ -32,9 +34,9 @@
     border-radius: 999px;
 }
 .error-container > span.four:before {
-    width: 43px;
-    height: 156px;
-    left: 60px;
+    width: 30%;
+    height: 370%;
+    left: 46%;
     bottom: -43px;
     background:
         linear-gradient(128deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 40%, transparent 41%, transparent 100%),
@@ -42,8 +44,8 @@
         linear-gradient(to top, #99749D, #B895AB, #CC9AA6, #D7969E, #E0787F);
 }
 .error-container > span.four:after {
-    width: 137px;
-    height: 43px;
+    width: 101%;
+    height: 100%;
     transform: rotate(-49.5deg);
     left: -18px;
     bottom: 36px;
@@ -51,8 +53,8 @@
 }
 
 .error-container > span.four1 {
-        width: 136px;
-        height: 43px;
+        width: 1.3em;
+        height: 0.4em;
         border-radius: 999px;
         transform-origin: 100% 100% 0px;
         transform: rotate(0deg);
@@ -70,8 +72,8 @@
         border-radius: 999px;
 }
 .error-container > span.four1:before {
-        width: 43px;
-        height: 156px;
+        width: 30%;
+        height: 370%;
         left: 60px;
         bottom: -43px;
         background:
@@ -80,8 +82,8 @@
             linear-gradient(to top, #99749D, #B895AB, #CC9AA6, #D7969E, #E0787F);
 }
 .error-container > span.four1:after {
-        width: 137px;
-        height: 43px;
+        width: 101%;
+        height: 100%;
         transform: rotate(-49.5deg);
         left: -18px;
         bottom: 36px;
@@ -90,8 +92,8 @@
 
 .error-container > span.zero {
     vertical-align: text-top;
-    width: 156px;
-    height: 156px;
+    width: 1.5em;
+    height: 1.5em;
     border-radius: 999px;
     background: linear-gradient(-45deg, transparent 0%, rgba(0, 0, 0, 0.06) 50%,  transparent 51%, transparent 100%),
         linear-gradient(to top right, #99749D, #99749D, #B895AB, #CC9AA6, #D7969E, #ED8687, #ED8687);
@@ -109,33 +111,33 @@
     left: 0px;
     bottom: 0px;
     background:
-        linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%),
-        linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
+    linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%),
+    linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
 }
 .error-container > span.zero:after {
-    content: '';
-    display: block;
-    position: absolute;
-    border-radius: 999px;
-    width: 70px;
-    height: 70px;
-    left: 43px;
-    bottom: 43px;
-    background: #FDFAF5;
-    box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+  content: '';
+  display: block;
+  position: absolute;
+  border-radius: 999px;
+  width: 0.67em;
+  height: 0.67em;
+  left: 43px;
+  bottom: 43px;
+  background: #1b1b1a;;
+  box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 .screen-reader-text {
-        position: absolute;
-        top: -0.125em;
-        left: -0.125em;
-        color:#FDFAF5;
-        position: absolute;
+  position: absolute;
+  top: -0.125em;
+  left: -0.125em;
+  position: absolute;
+  font-size: 0;
 }
 .screen-reader-text-zero {
-    position: absolute;
-    top: -9999em;
-    left: -9999em;
+  position: absolute;
+  top: -9999em;
+  left: -9999em;
 }
    
 
@@ -207,14 +209,14 @@
   }
 }
 
-/* demo stuff */
+/*  stuff */
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 body {
-  background-color: #FDFAF5;
+  background-color: #1b1b1a;
   margin-bottom: 50px;
 }
 html, button, input, select, textarea {
@@ -237,15 +239,26 @@ h1 {
 a.more-link {
   text-transform: uppercase;
   font-size: 13px;
-    background-color: #de7e85;
-    padding: 10px 15px;
-    border-radius: 0;
-    color: #fff;
-    display: inline-block;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    line-height: 1.5;
-    text-decoration: none;
+  background-color: #de7e85;
+  padding: 10px 15px;
+  border-radius: 0;
+  color: #fff;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  line-height: 1.5;
+  text-decoration: none;
   margin-top: 50px;
   letter-spacing: 1px;
+}
+
+@media (max-width: 400px){
+  .error-container {
+    text-align: center;
+    font-size: 106px;
+    font-family: 'Catamaran', sans-serif;
+    font-weight: 800;
+    margin: 70px 25px;
+    width: 77%;
+} 
 }
