--- a/css/index.css
+++ b/css/index.css
@@ -407,7 +407,7 @@ nav .content .links{
     align-items: center;
     justify-content: center;
     height: 100%;
-    padding: 0px;
+    padding: 70px 0px;
 }
   .box{
     width: 85%;
