--- a/css/home.css
+++ b/css/home.css
@@ -583,7 +583,7 @@ a{
   content:'';
   position: absolute;
   top: 0;
-  left: 50;
+  left: 50px;
   width: 50%;
   height: 100%;
   background: #fff;
