--- a/css/quiz.css
+++ b/css/quiz.css
@@ -395,7 +395,7 @@ nav .content .links{
 
 .image .details h2{
 	text-align: center;
-	font-size: 1em;
+	font-size: 1.5em;
 	text-transform: uppercase;
 	font-weight: 300;
 	margin-top: 70px;
@@ -405,35 +405,25 @@ nav .content .links{
 
 .image .details h2 span{
 	font-weight: 900;
+  font-size: 1.5em;
+  background-color: #000;
+  border-radius: 20%;
 }
 
 .image:hover .details h2{
 	transform: translateY(-30px);
 }
 
-.image .details p{
-	margin: 30px 30px 0 30px;
-	font-size: 0.8em;
-	font-weight: 600;
-	text-align: center;
-	opacity: 0;
-	transition: 0.6s;
-	transition-property: opacity, transform;
-}
-
-.image:hover .details p{
-	opacity: 1;
-	transform: translateY(-40px);
-}
 
 .more{
 	position: absolute;
-	background: rgba(255, 255, 255, 0.8);
+	background: linear-gradient(to bottom, rgba(224, 146, 94, 0.8) 0%,rgba(230, 71, 71, 0.8) 100%);
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 15px;
+  padding-left: 35%;
 	bottom: -60px;
 	transition: 0.6s;
 	transition-property: bottom;
@@ -454,6 +444,7 @@ nav .content .links{
 .more .read-more span{
 	font-weight: 900;
 }
+
 
 .more .icon-links a:not(:last-child) i{
 	margin-right: 20px;
