--- a/views/html/davinci.html
+++ b/views/html/davinci.html
@@ -12,24 +12,24 @@
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="inventatori-si-savanti.html">Back</a>
+            <a class="go-back" href="inventatori-si-savanti">Back</a>
         </div>   
     </nav>
        
     <div class ="banner-area">
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om3/dav-img1.JPG" alt="">
+                <img src = "/static/img/om3/dav-img1.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om3/dav-img2.JPG" alt="">
+                <img src = "/static/img/om3/dav-img2.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om3/dav-img3.JPG" alt="">
+                <img src = "/static/img/om3/dav-img3.JPG" alt="">
             </div>
         </div>
     </div>
