--- a/views/html/home.ejs
+++ b/views/html/home.ejs
@@ -12,7 +12,7 @@
    <div class="banner">
         <div class = "imagine"></div>
         <div id="buttonquiz">
-            <a class="go-quiz" href="quiz.html"><b>Vezi acum!</b></a>
+            <a class="go-quiz" href="quiz"><b>Vezi acum!</b></a>
         </div>
     </div>
 <main>
@@ -27,7 +27,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" src="img/tastatura.jpg" alt="tastatura">
+                            <img class="profile" src="/static/img/tastatura.jpg" alt="tastatura">
                             <h2>Tastatura invizibilă</h2>
                             <h5>Yapi N'Cho Didier</h5>
                         </div>
@@ -38,7 +38,7 @@
                             <p class="des">
                                 Acest instrument pare cu siguranţă rupt din filmele science fiction. Tastatura invizibilă Noki funcţionează cu ajutorul unui set de două brăţări care ...
                             </p>
-                            <h4><a href="inventii.html#tast">Read more </a></h4>
+                            <h4><a href="inventii#tast">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                     <div class="content">
                         
                         <div class="front">
-                            <img class="profile"  src="img/cada-sferica.jpg" alt="cada sferica">
+                            <img class="profile"  src="/static/img/cada-sferica.jpg" alt="cada sferica">
                             <h2>Cada de baie sferică</h2>
                             <h5>Aleksandr Zhukovskii</h5>
                         </div>
@@ -61,7 +61,7 @@
                             <p class="des">
                                 Designerul rus Aleksandr Zhukovskii a revoluţionat tehnologia căzilor de baie, construind una în formă de sferă. Acesta spune că senzaţia pe care o ai ...
                             </p>
-                            <h4><a href="inventii.html#cada">Read more </a></h4>
+                            <h4><a href="inventii#cada">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" src="img/robinet-in.jpg" alt="robinet">
+                            <img class="profile" src="/static/img/robinet-in.jpg" alt="robinet">
                             <h2>Robinetul econmic</h2>
                             <h5>Simin Qiu</h5>
                         </div>
@@ -82,7 +82,7 @@
                             <p class="des">
                                 Tânărul designer Simin Qiu a creat un robinet de baie unic care, pe lângă că arată absolut superb, te ajută ...
                             </p>
-                            <h4><a href="inventii.html#rob">Read more </a></h4>
+                            <h4><a href="inventii#rob">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" src="img/drona.jpg" alt="drona">
+                            <img class="profile" src="/static/img/drona.jpg" alt="drona">
                             <h2>Drona cu autonomie mare</h2>
                             <h5>Mihai Dragu</h5>
                         </div>
@@ -107,7 +107,7 @@
                             <p class="des">
                                 Un inginer român este autorul unei invenții de record mondial. Mihai Dragu a construit o dronă care a traversat....
                             </p>
-                            <h4><a href="inventii.html#drona">Read more </a></h4>
+                            <h4><a href="inventii#drona">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile" src="img/butuc-in.jpg" alt="lampa butuc">
+                            <img class="profile" src="/static/img/butuc-in.jpg" alt="lampa butuc">
                             <h2>Lampa butuc</h2>
                             <h5>Duncan Meerding</h5>
                         </div>
@@ -128,7 +128,7 @@
                             <p class="des">
                                 Un inventator australian a reuşit să descopere o modalitate prin care să introducă o sursă de lumină în inte...
                             </p>
-                            <h4><a href="inventii.html#lampa">Read more </a></h4>
+                            <h4><a href="inventii#lampa">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <div class="content">
                         <div class="front">
-                            <img class="profile"  src="img/dispozitiv-vreme.jpg" alt="dispozitiv vreme">
+                            <img class="profile"  src="/static/img/dispozitiv-vreme.jpg" alt="dispozitiv vreme">
                             <h2>Dispozitiv vreme</h2>
                             <h5>Ken Kawamoto</h5>
                         </div>
@@ -148,7 +148,7 @@
                             <p class="des">
                                 Ken Kawamoto este un inginer care vrea să aducă tehnologia mai aproape de vieţile oamenilor, aşa că a inventat un ...
                             </p>
-                            <h4><a href="inventii.html#vreme">Read more </a></h4>
+                            <h4><a href="inventii#vreme">Read more </a></h4>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                 <p>- Daniel Gabriel Fahrenheit</p>
                 <p>-  Nikolaus Otto</p>
                 <p>-  Aurel Enache</p>
-                <a href="generalitati.html#fizica">Read More</a>
+                <a href="generalitati#fizica">Read More</a>
             </div>
         </div>
         <div class="boxd">
@@ -181,7 +181,7 @@
                 <p>- Lazar Edeleanu</p>
                 <p>- Sir Humphry Davy</p>
                 <p>- Alfred Nobel</p>
-                <a href="generalitati.html#chimie">Read More</a>
+                <a href="generalitati#chimie">Read More</a>
             </div>
         </div>
         <div class="boxd">
@@ -192,7 +192,7 @@
                 <p>- Aurel Vlaicu</p>
                 <p>- Traian Vuia</p>
                 <p>- Frații Wright</p>
-                <a href="generalitati.html#aviatie">Read More</a>
+                <a href="generalitati#aviatie">Read More</a>
             </div>
         </div>
         <div class="boxd">
@@ -203,7 +203,7 @@
                 <p>- Wilhelm Conrad Rontgen</p>
                 <p>- Rene Laennec</p>
                 <p>- Alfred Nobel</p>
-                <a href="generalitati.html#medicina">Read More</a>
+                <a href="generalitati#medicina">Read More</a>
             </div>
         </div>
         <div class="boxd">
@@ -214,7 +214,7 @@
                     <p>- David Bushnell</p>
                     <p>- Claude de Jouffroy</p>
                     <p>- Josef Resselt</p>
-                <a href="generalitati.html#navigatie">Read More</a>
+                <a href="generalitati#navigatie">Read More</a>
             </div>
         </div>
     </div>
