--- a/views/html/quiz.ejs
+++ b/views/html/quiz.ejs
@@ -96,6 +96,6 @@
     </div>
     </section>
     </main>
-    <script src = "js/quiz.js"></script>
+    <script src = "/static/js/quiz.js"></script>
 </body>
 </html>
