--- a/views/html/quiz2.html
+++ b/views/html/quiz2.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz2</title>
-    <link rel="stylesheet" type="text/css" href="css/quiz2.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/quiz2.css">
 </head>
 
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="quiz.html">Back</a>
+            <a class="go-back" href="quiz">Back</a>
         </div>   
     </nav>
     <container>
         <cont1></cont1>
         <cont2></cont2>
     </container>
-    <script src="js/quiz2.js"></script>
+    <script src="/static/js/quiz2.js"></script>
 </body>
 </html>
