--- a/views/html/quiz3.html
+++ b/views/html/quiz3.html
@@ -6,19 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quiz1</title>
-    <link rel="stylesheet" type="text/css" href="css/quiz3.css">
+    <title>Quiz3</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/quiz3.css">
 </head>
 
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="quiz.html">Back</a>
+            <a class="go-back" href="quiz">Back</a>
         </div>    
      
     </nav>
    
  
-    <script src="js/quiz3.js"></script>
+    <script src="/static/js/quiz3.js"></script>
 </body>
 </html>
