--- a/views/html/bell.html
+++ b/views/html/bell.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="inventatori-si-savanti.html">Back</a>
+            <a class="go-back" href="inventatori-si-savanti">Back</a>
         </div>   
     </nav>
        
@@ -20,17 +20,17 @@
     <div class ="banner-area">
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om2/bell-img1.JPG" alt="">
+                <img src = "/static/img/om2/bell-img1.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om2/bell-img2.JPG" alt="">
+                <img src = "/static/img/om2/bell-img2.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om2/bell-img3.JPG" alt="">
+                <img src = "/static/img/om2/bell-img3.JPG" alt="">
             </div>
         </div>
     </div>
