--- a/views/html/quiz1.html
+++ b/views/html/quiz1.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz1</title>
-    <link rel="stylesheet" type="text/css" href="css/quiz1.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/quiz1.css">
 </head>
 
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="quiz.html">Back</a>
+            <a class="go-back" href="quiz">Back</a>
         </div>   
     </nav>
     <container></container>
-    <script src="js/quiz1.js"></script>
+    <script src="/static/js/quiz1.js"></script>
 </body>
 </html>
