--- a/views/html/quiz4.html
+++ b/views/html/quiz4.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netwon's apple</title>
-    <link rel="stylesheet" type="text/css" href="css/quiz4.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/quiz4.css">
 </head>
 <body>
 	<nav>
         <div id="returnbutton">
-            <a class="go-back" href="quiz.html">Back</a>
+            <a class="go-back" href="quiz">Back</a>
         </div>    
     </nav>
 <game>
@@ -106,6 +106,6 @@
         <div></div>
     </div>
 </game>
-    <script src="js/quiz4.js"></script>
+    <script src="/static/js/quiz4.js"></script>
 </body>
 </html>
