--- a/views/html/quiz5.html
+++ b/views/html/quiz5.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/quiz5.css">
+    <title>Quiz5</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/quiz5.css">
 </head>
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="quiz.html">Back</a>
+            <a class="go-back" href="quiz">Back</a>
         </div>    
     </nav>
     <div id="game">
@@ -32,6 +32,6 @@
         </div>
       </div>
     </div>
-      <script src = "js/quiz5.js"></script>
+      <script src = "/static/js/quiz5.js"></script>
 </body>
 </html>
