--- a/views/html/tesla.html
+++ b/views/html/tesla.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nikola Tesla</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 
 <body>
     <nav>
         <div id="returnbutton">
-            <a class="go-back" href="inventatori-si-savanti.html">Back</a>
+            <a class="go-back" href="inventatori-si-savanti">Back</a>
         </div>   
     </nav>
        
     <div class ="banner-area">
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om6/tesla-img1.JPG" alt="">
+                <img src = "/static/img/om6/tesla-img1.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om6/tesla-img2.JPG" alt="">
+                <img src = "/static/img/om6/tesla-img2.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
             <div class="banner-img">
-                <img src = "img/om6/tesla-img3.JPG" alt="">
+                <img src = "/static/img/om6/tesla-img3.JPG" alt="">
             </div>
         </div>
         <div class="sigle-banner">
