--- a/views/html/inventii.ejs
+++ b/views/html/inventii.ejs
@@ -23,6 +23,9 @@
                     <option value="20">2000-prezent</option>
                 </select>
             </div>
+            <div id="returnbutton">
+                <a class="go-back" href="invent.html">go to interective interface</a>
+            </div>  
             <div id="becul" class="card-container" data-Inventator="Thomas Edison" data-Inventator-r="Sir Humphry Davy"data-an="1879">
                 <div class="card u-clearfix">
                     <div class="card-body">
