--- a/views/html/quiz.ejs
+++ b/views/html/quiz.ejs
@@ -85,14 +85,16 @@
 
       <select name="domains-select" id="domains-select">
           <option value="">--Please choose an option--</option>
+          <option value="all">All</option>
           <option value="fizica">Fizică</option>
           <option value="chimie">Chimie</option>
           <option value="medicina">Medicină</option>
           <option value="aviatie">Aviație</option>
-          <option value="navigație">Navigație</option>
+          <option value="navigatie">Navigație</option>
       </select>
       <button name="button" onClick = "alege()">Press me</button>
-      <button name="button" onClick = "sort()">Sort results</button>
+      <button name="button" onClick = "sort()">Sort alfabetically</button>
+      <button name="button" onClick = "sortyear()">Sort by year</button>
     </div>
     </section>
     </main>
