--- a/static/css/invent.css
+++ b/static/css/invent.css
@@ -16,7 +16,7 @@
 }
 body{
   width: 100%;
-  height: 100%;
+  height: 1000vh;
   color: #444246;
   background:  linear-gradient(to bottom, #c0798d 0%,#6b5394 100%);
   background-size: cover;
@@ -341,63 +341,160 @@ nav .content .links{
   }
 }
 
-/* tabelul*/
+#introduce{
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin-left: 5%;
+}
 
-.tabelul {
-	padding: 100px 0px;
+/*main*/
+
+.content-inv {
+  padding: 100px 0px;
   width: 100%;
   height: 100%;
   align-items: center;
 }
-
-
-/*inventii*/
-.title{
-  text-align: center;
-  color: #000;
-  font-size: 180%;
+.optiuni{
+  display: flex;
+  justify-content: center;
 }
-table {
+
+
+main, main:before, main:after {
+  box-sizing: inherit;
+}
+
+.u-clearfix:before,
+.u-clearfix:after {
+  content: " ";
+  display: table;
+}
+
+.u-clearfix:after {
+  clear: both;
+}
+
+.u-clearfix {
+  width: 100%;
+  height: 100%;
+}
+
+.subtle {
+  color: #aaa;
+}
+
+.card-container {
+  margin: 25px auto 0;
+  position: relative;
+  width: 63%;
+}
+
+.card {
+  background-color: #fff;
+  padding-left: 30px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+  box-shadow: 0 0 5px rgba(75, 75, 75, .07);
+  z-index: 1;
+}
+
+.card-body {
+  float: left;
+  width: 50%;
+  min-height: 100%;
+}
+
+.card-number {
+  margin-top: 15px;
+}
+
+.card-circle {
+  border: 1px solid #aaa;
+  border-radius: 50%;
+  display: inline-block;
+  line-height: 22px;
+  font-size: 12px;
+  height: 25px;
   text-align: center;
-  margin: 5%;
-  width: 90%;
+  width: 25px;
+}
+
+
+
+.card-title {
+  font-family: 'Cormorant Garamond', serif;
+  font-size:140%;
+  font-weight: 300;
+  line-height: 40px;
+  margin: 10px 0;
+}
+
+.card-p {
+  font-family: 'Cormorant Garamond', serif;
+  font-size:0.6em;
+  font-weight: 300;
+  line-height: 10px;
+  margin: 10px 0;
+}
+
+.card-p1 {
+  font-family: 'Cormorant Garamond', serif;
+  font-size:0.6em;
+  font-weight: 300;
+  line-height: 16px;
+  margin: 10px 0;
+}
+
+.card-description {
+  display: inline-block;
+  font-weight: 300;
+  font-size:0.55em;
+  color: black;
+  margin: 10px 0;
+}
+
+
+
+.card-media {
+  float: right;
+  width: 50%;
   min-height: 70vh;
-  border-spacing: 30px;
+  object-fit: cover;
 }
-td{
-  background-color: #232427;
-  border: 1px solid #232427;
-  box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 51%),
-  -5px -5px 5px 5px rgb(100 100 100 / 20%),
-  inset 5px 5px 5px 5px rgb(0 0 0 / 51%),
-  inset -5px -5px 5px 5px rgb(100 100 100 / 20%);
+
+.card-shadow {
+  background-color: #fff;
+  box-shadow: 0 2px 25px 2px rgba(0, 0, 0, 1), 0 2px 50px 2px rgba(0, 0, 0, 1), 0 0 100px 3px rgba(0, 0, 0, .25);
+  height: 1px;
+  margin: -1px auto 0;
+  width: 80%;
+  z-index: -1;
 }
-td a img {
-  width: 100%;
-  min-height: 40vh;
-  max-height: 70vh;
-}
-td a h2{
-  text-align: center;
-  color: rgb(255, 255, 255);
-  font-size: 80%;
-  font-weight: lighter;
+
+@media (max-width: 400px){
+	.card-container {
+    margin: 25px auto 0;
+    position: relative;
+    width: 85%;
+  }
 }
 
 
-
-@media(max-width: 400px){
- 
-  table {
-    text-align: center;
-    margin: 2%;
-    width: 97%;
-    min-height: 50vh;
-    border-spacing: 10px;
-  } 
-td a img {
-  width: 100%;
-  min-height: 30vh;
-  max-height: 50vh;
+#returnbutton {
+    position: fixed;
+    top: 15px;
+    right: 10px;
 }
+.go-back {
+    background-color : #506064;
+    color: #f5e8e2;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-size: 20px;
+    border-color: #181e20;
+    opacity: .9;
 }
