--- a/static/css/inventii.css
+++ b/static/css/inventii.css
@@ -115,7 +115,7 @@ nav .content .links{
   position: absolute;
   height: 100%;
   max-width: calc(100% - 50px);
-  /*width: 100%;*/
+  width: 100%;
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s ease;
@@ -474,4 +474,14 @@ main, main:before, main:after {
     position: relative;
     width: 85%;
   }
+}
+
+.go-back {
+  position: relative;
+  background-color : #1c2022;
+  color: #e7bba7;
+  font-size: 20px;
+  border-radius: 4px;
+  border-color: #181e20;
+  opacity: .9;
 }
