--- a/views/html/register-login.html
+++ b/views/html/register-login.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-div">
                     <div class="login-form">
-                        <form action="404error.html" method="post" id="login-form">
+                        <form  id="login-form">
                             <h3>Login</h3>
                             <div class="form-group">
                                 <input type="text" name="emailAddress" placeholder="Email Address" autocomplete="off" class="form-control text">
@@ -37,14 +37,14 @@
                                     <input type="checkbox" checked name="Remember" id="Remember"> Remember Me
                                 </label>
                             </div>
-                            <button class="submit-btn">Login</button>
+                            <button class="submit-btn" onclick = "validare()">Login</button>
                         </form>
                     </div>
                     <div class="register-form form-hidden">
-                        <form action="404error.html" method="post" id="register-form">
+                        <form  id="register-form">
                             <h3>Registration</h3>
                             <div class="form-group">
-                                <input type="text" name="fullname" placeholder="Full Name*" autocomplete="off" class="form-control text">
+                                <input type="text" id = "fullname" name="fullname" placeholder="Full Name*" autocomplete="off" class="form-control text">
                             </div>
                             <div class="form-group">
                                 <input type="text" name="emailAddress" placeholder="Email Address" autocomplete="off" class="form-control text">
@@ -59,7 +59,7 @@
                                 <input type="radio" id="fem" name="gen" value="F">
                                 <label  for="fem"><span>F</span></label>
                             </div>
-                            <button class="submit-btn">Register</button>
+                            <button class="submit-btn" onclick = "validare1()">Register</button>
                         </form>
                     </div>
                 </div>
@@ -67,6 +67,8 @@
         </div>     
         <div class="mode">
             <button id = "mod" class="go-back" onclick = "Mode()">Dark Mode/Light Mode</button>
+            <button id = "clear" class="go-back" onclick = "clearmode()">Reseteaza la modul implicit</button>
+            <button id = "set" class="go-back" onclick = "setmode()">Seteaza ca mod implicit</button>
         </div>
         <script src = "/static/js/register-login.js">
      
