--- a/views/html/invent.html
+++ b/views/html/invent.html
@@ -27,6 +27,9 @@
             <button onclick = "delet()">Delete</button>
         </div>
     </div>
+    <div id="returnsus">
+        <a class="go-back" href="invent.html#top">Sus</a>
+    </div>
    <script src="/static/js/invent.js"></script>
         
 </body>
