--- a/static/css/invent.css
+++ b/static/css/invent.css
@@ -189,6 +189,11 @@ main, main:before, main:after {
     top: 15px;
     right: 10px;
 }
+#returnsus {
+  position: fixed;
+  bottom: 15px;
+  right: 10px;
+}
 .go-back {
     background-color : #506064;
     color: #f5e8e2;
